<resources>
    <string name="app_name">Curta Cultura</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_login">Login</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Senha</string>
    <string name="label_button_enter">Entrar</string>
    <string name="label_forgot_password">Esqueceu a Senha?</string>
    <string name="label_new_register">Cadastra-se</string>
    <string name="label_register">Registre-se</string>
    <string name="hint_name">Nome Completo</string>
    <string name="hint_email">email</string>
    <string name="label_enviar">Enviar</string>
    <string name="hint_senha">senha</string>
    <string name="hint_senha_confir">Confirmar Senha</string>
    <string name="hint_back">Voltar</string>
    <string name="label_text_forgot_password">Informe seu email, enviaremos um email, para que possa resgatar a sua senha.</string>
    <string name="mensagem_digite_seu_nome">Digite seu nome</string>
    <string name="mensagem_digite_email">Informe Email</string>
    <string name="mensagem_informe_senha">Informe Senha</string>
    <string name="mensagem_confirme_senha">Confirme senha</string>
    <string name="mensagem_campo_senha_diferente">Os campos de senhas devem ser iguais.</string>
    <string name="mensagem_envio_email">Enviamos um email para resetar a senha</string>

    <string name="admob_id">ca-app-pub-9790161319952745~4357086172</string>
    <string name="admob_idteste">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_id">ca-app-pub-9790161319952745/2463412390</string>
    <string name="intercitial_id">ca-app-pub-9790161319952745/7663768180</string>
</resources>
