<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.curtacultura.curtacultura.scenes.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_4">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/draw"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/loginTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/label_login"
            android:textColor="#cc001833"
            android:textSize="24sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/userEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/loginTXT"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_user"
            android:lineSpacingExtra="4sp"
            android:textColor="#8a001833"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/passwordEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_password"
            android:lineSpacingExtra="4sp"
            android:textColor="#8a001833"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/enterBTN"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/default_elevation_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="41dp"
            android:background="@android:color/white"
            android:text="@string/label_button_enter"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/forgotPasswordTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/newRegisterTXT"
            android:layout_alignBottom="@+id/newRegisterTXT"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/label_forgot_password"
            android:textColor="#0053b3"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/newRegisterTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/label_new_register"
            android:textColor="#0053b3"
            android:textSize="16sp"
            android:textStyle="normal" />
    </RelativeLayout>

</RelativeLayout>
